--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -40,6 +40,7 @@
   <!-- Fallback for local builds and CI environments we don't recognize -->
   <PropertyGroup>
     <NtsBuildMetadata Condition=" '$(NtsBuildMetadata)' == '' ">local</NtsBuildMetadata>
+    <NtsOfficialRelease>true</NtsOfficialRelease>
   </PropertyGroup>
 
   <PropertyGroup Label="Version numbers">
